Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10922

iTunes 11.1.3 update breaks iOS device depolyment

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • Qt Creator 3.0.0-beta
    • iOS Support
    • None
    • 5d4e9066c8c53f2612f809b5f6d28b0c39561ec1

      Updating iTunes to version 11.1.3 replaces /System/Library/PrivateFrameworks/MobileDevice.framework and that breaks deployment to the device.

      Exploring the possible use of SDMMobileDevice.framework to avoid depending on private API.

        For Gerrit Dashboard: QTCREATORBUG-10922
        # Subject Branch Project Status CR V

            fawzi Fawzi Mohamed
            fawzi Fawzi Mohamed
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes