ios: fix running/debugging with new version of MobileDevice.framework

The version of MobileDevice.framework shipped with iTunes 11.1.3 and
XCode 5.0.2 does not support concurrent connections well, asking
for the application path while the connection to gdb was open would
lock up the device, and require a reboot.

Task-number: QTCREATORBUG-10922
Change-Id: I939cb9e75896e200da552d6708c01e726b9d7b45
Reviewed-by: Fawzi Mohamed <fawzi.mohamed@digia.com>